# pulsepredict

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  HOW_TO_RUN.md  HOW_TO_RUN.txt  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: celery_app.py  main.py  models.py  tasks.py
apps/ui/: app.py
configs/: data.yaml  deepar.yaml  nbeatsx.yaml  patchtst.yaml  tft.yaml
docs/: ABLATION_REPORT.md  ARCHITECTURE.md  ROADMAP.md
infra/docker/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker
infra/grafana/dashboards/: api_metrics.json  model_drift.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: datasources.yaml
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: deployment-api.yaml
infra/prometheus/: alerts.yml  prometheus.yml
ml/conformal/: adaptive_conformal.py  cqr.py  evaluate.py  split_conformal.py
ml/data/: datamodule.py  dataset.py  feature_lib.py
ml/drift/: monitor.py
ml/eval/: backtest.py  metrics.py
ml/intervention/: causal_impact.py  run_case.py
ml/models/: chronos.py  deepar.py  nbeatsx.py  patchtst.py  tft.py
ml/reconcile/: reconciler.py  run_reconcile.py
ml/train/: cli.py  hpo.py
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_patchtst.ipynb  04_conformal.ipynb  05_intervention.ipynb
scripts/: build_features.py  conformal_full_eval.py  download_ett.py  download_m5.py  run_backtest.py  run_chronos.py  run_conformal.py  run_drift_eval.py  run_hpo.py  run_reconciliation.py  train_all_remaining.py
tests/integration/: test_smoke_train.py
tests/unit/: test_conformal.py  test_metrics.py  test_models.py
