[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulsepredict"
version = "0.1.0"
description = "Probabilistic time-series forecasting — MTech DS portfolio project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Utkarsh Sinha", email = "sinha.utkarshsinha30@gmail.com" }]

dependencies = [
  # ── Core ML ──────────────────────────────────────────────────────────────
  "torch>=2.3.0",
  "lightning>=2.3.0",
  "einops>=0.8.0",
  "numpy>=1.26.4",
  "scipy>=1.13.1",
  "scikit-learn>=1.5.1",

  # ── Time-series libraries ────────────────────────────────────────────────
  # NeuralForecast: N-BEATSx, TFT, DeepAR, PatchTST
  "neuralforecast>=1.7.6",
  # StatsForecast: ARIMA, ETS, Seasonal Naïve
  "statsforecast>=1.7.5",
  # Hierarchical reconciliation: MinT, BottomUp, TopDown
  "hierarchicalforecast>=0.4.0",
  # Amazon Chronos-T5 zero-shot foundation model
  "chronos-forecasting>=1.3.2",
  # HPO
  "optuna>=3.6.1",
  "optuna-integration[mlflow]>=3.6.1",

  # ── Feature engineering ──────────────────────────────────────────────────
  "polars>=1.1.0",
  "duckdb>=1.0.0",
  "pyarrow>=17.0.0",

  # ── Bayesian / causal intervention ──────────────────────────────────────
  "pymc>=5.16.0",
  "arviz>=0.19.0",

  # ── MLOps ───────────────────────────────────────────────────────────────
  "mlflow>=2.14.1",
  "dvc[s3]>=3.51.2",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "evidently>=0.4.30",

  # ── Serving / backend ────────────────────────────────────────────────────
  "fastapi>=0.111.1",
  "uvicorn[standard]>=0.30.1",
  "celery[redis]>=5.4.0",
  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "redis>=5.0.7",
  "minio>=7.2.7",

  # ── Monitoring ───────────────────────────────────────────────────────────
  "prometheus-client>=0.20.0",

  # ── Reporting / UI ───────────────────────────────────────────────────────
  "matplotlib>=3.9.1",
  "streamlit>=1.36.0",
  "plotly>=5.22.0",

  # ── Utilities ────────────────────────────────────────────────────────────
  "tqdm>=4.66.4",
  "rich>=13.7.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.2",
  "mypy>=1.10.1",
  "pre-commit>=3.7.1",
  "ipykernel>=6.29.5",
]

[project.scripts]
pulsepredict-train    = "ml.train.cli:main"
pulsepredict-ingest   = "scripts.download_m5:main"
pulsepredict-backtest = "scripts.run_backtest:main"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"scripts/**/*.py" = ["ANN"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
# neuralforecast / statsforecast ship no stubs
[[tool.mypy.overrides]]
module = [
  "neuralforecast.*",
  "statsforecast.*",
  "hierarchicalforecast.*",
  "chronos.*",
  "optuna.*",
  "mlflow.*",
  "dvc.*",
  "pymc.*",
  "arviz.*",
  "evidently.*",
  "minio.*",
  "celery.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "--cov=ml --cov=apps --cov-report=term-missing -q"

# ── Hatch build ──────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["ml", "apps", "services"]
